非同期処理と非同期処理をトリガーするためのUIを追加 (#148)
